--- a/note/reactNative/项目初始化.md
+++ b/note/reactNative/项目初始化.md
@@ -11,3 +11,29 @@
     adb devices // 查看设备
 ```
 
+## RN 学习疑惑点
+
+
+
+### 布局部分
+
+与web差异的地方
+
+flexDirection 默认值： column
+
+
+### 样式
+
+- 样式都是无单位的
+- 设定尺寸，都是固定的width 和 height
+- 常用Flex布局
+- 设置颜色跟web一样
+- 文字居中：textAlign: 'center'
+- 没有文字样式继承， 文字只能使用文本标签
+  - 对于Text --> Text 可以继承
+
+
+
+### 图片引用
+
+
