--- a/note/前端周/202203第三周.md
+++ b/note/前端周/202203第三周.md
@@ -92,7 +92,7 @@ _相互关联的原型组成的链状结构就是原型链_
 
 含义: instanceof 用于判断实例是否属于这个构造函数。
 
-对象的.**proto** 是否等于 target.prototype
+`对象的.__proto__`是否等于`target.prototype`
 
 ```js
 function instanceof(origin, target) {
