add: apply、call

--- a/note/前端周/202203第三周.md
+++ b/note/前端周/202203第三周.md
@@ -106,3 +106,28 @@ function instanceof(origin, target) {
 }
 
 ```
+
+## apply 和 call 的作用及区别
+
+片面理解：
+作用： 改变 this 的指向。
+区别： 传递参数不一样 `apply` 接收两个参数 ,第一个参数需要指向的对象，第二个数组。 `call`: 接收多个参数，第一个参数与 apply 一样，其他多个参数以,分隔传入。
+
+比较正式理解：
+定义： 能够改变函数的执行时的上下文，将一个对象的方法交给另外一个对象来执行，并且是立即执行的。
+
+注意：调用 call 和 apply 的对象，必须是一个函数 Function
+
+手写 apply
+
+```js
+function myApply(ctx, args) {
+    ctx = ctx || windows
+    const key = symbol()
+    ctx[key] = this
+    if (Array.isArray(args)) return new Error('apply第二个参数必须是数组')
+    const result = ctx[key](...args)
+    delete ctx[key]
+    return result
+}
+```
