--- a/note/前端周/202203第三周.md
+++ b/note/前端周/202203第三周.md
@@ -131,3 +131,14 @@ function myApply(ctx, args) {
     return result
 }
 ```
+
+## position 有哪些值，作用分别是什么
+
+自己理解：
+`realtive` `absoulte` `static` `fixed` `sticky` (理解 100%)
+
+realtive: 相对自身定位
+absolute: 绝对定位，绝对定位元素相对于最近的非 static 祖先元素定位。 (相对定位未脱离文档流，绝对定位脱离了文档流) 绝对定位不占空间。
+static: 正常行为，默认值
+fixed: 固定定位与绝对定位相似，但元素的包含块为 viewport 适口。
+sticky: 粘性定位，可以被认为是相对定位和固定定位的混合。元素在跨越特定的阀值前为相对定位，之后为固定定位。必须与`top` `bottom` `left` `right` 之一搭配使用，才能生效。否则行为就与相对定位相同。
