--- a/note/前端周/202203第4周.md
+++ b/note/前端周/202203第4周.md
@@ -15,4 +15,79 @@ react 实现了一套自己的机制，在 DOM 事件体系基础上做了改进
 -   react 通过对象池的形式管理合成事件对象的创建和销毁，减少了垃圾的生成和新对象内存的分配，提高了性能
 
 参考：
-[探索 React 合成事件](https://segmentfault.com/a/1190000038251163#:~:text=React%20%E6%8F%90%E4%BE%9B%E7%9A%84%E5%90%88%E6%88%90%E4%BA%8B%E4%BB%B6,%E5%B9%B3%E5%8F%B0%E4%BA%8B%E4%BB%B6%E6%A8%A1%E6%8B%9F%E5%90%88%E6%88%90%E4%BA%8B%E4%BB%B6%E3%80%82&text=%E4%BA%8B%E4%BB%B6%E5%AF%B9%E8%B1%A1%E5%8F%AF%E8%83%BD%E4%BC%9A%E8%A2%AB,%E5%92%8C%E9%94%80%E6%AF%81(%E5%9E%83%E5%9C%BE%E5%9B%9E%E6%94%B6)%E3%80%82)
+[探索 React 合成事件](<https://segmentfault.com/a/1190000038251163#:~:text=React%20%E6%8F%90%E4%BE%9B%E7%9A%84%E5%90%88%E6%88%90%E4%BA%8B%E4%BB%B6,%E5%B9%B3%E5%8F%B0%E4%BA%8B%E4%BB%B6%E6%A8%A1%E6%8B%9F%E5%90%88%E6%88%90%E4%BA%8B%E4%BB%B6%E3%80%82&text=%E4%BA%8B%E4%BB%B6%E5%AF%B9%E8%B1%A1%E5%8F%AF%E8%83%BD%E4%BC%9A%E8%A2%AB,%E5%92%8C%E9%94%80%E6%AF%81(%E5%9E%83%E5%9C%BE%E5%9B%9E%E6%94%B6)%E3%80%82>)
+
+## es5 实现继承
+
+**原型链继承**
+
+```js
+function Parent(name) {
+    this.name = name
+}
+Parent.prototype.getName = function () {
+    console.log(this.name)
+}
+function Child() {}
+Child.prototype = new Parent('zhu yao geng')
+const child1 = new Child()
+console.log(child1.getName())
+```
+
+带来的问题：
+
+-   引用类型被所有实际例子共享
+-   不能传递参数
+
+**借用构造函数（经典继承）**
+
+```js
+function Parent() {
+    this.names = ['zyg', 'ygz']
+}
+
+function Child() {
+    Parent.call(this)
+}
+```
+
+优点
+
+-   避免了引用类型的属性被所有实例共享
+-   可以传递参数
+
+缺点：
+
+-   方法在构造函数中实现，每次创建实例都会创建一遍方法
+
+**组合继承**
+
+组合继承就是实现了 原型链继承和经典继承的合并
+
+```js
+function Parent(name) {
+    this.name = name
+}
+
+Parent.prototype.getName = function () {
+    console.log(this.name)
+}
+
+function Child(name) {
+    Parent.call(this, name)
+    this.name = name
+}
+
+Child.prototype = new Parent()
+Child.prototype.contructor = Child
+```
+
+**原型式继承**
+
+```js
+function createObj(o) {
+    function F() {}
+    F.prototype = o
+    return new F()
+}
+```
