add: cache-Control

--- a/note/前端周/202203第4周.md
+++ b/note/前端周/202203第4周.md
@@ -91,3 +91,76 @@ function createObj(o) {
     return new F()
 }
 ```
+
+## 缓存
+
+**强缓存**
+
+cache-Control:
+
+-   在 response headers 中
+-   控制缓存的逻辑
+-   Cache-Control:max-age=20000(单位毫秒)
+
+标识：
+
+-   max-age: 缓存最大过期的时间
+-   no-cache: 可以在客户端存储资源，但是每次必须去服务端做新鲜度校验，来决定服务端获取新的资源（200）还是使用客户端缓存的（304）
+-   no-store
+
+**协商缓存（对比缓存）**
+
+-   服务端缓存策略
+-   服务端判断客户端资源，是否和服务端一致。
+-   一致则返回 304，否则返回 200 和最新资源
+
+标识：(response headers)
+
+-   last-modified: 资源最后修改的时间
+-   etag: 资源唯一标识
+
+etag 和 last-modified 一样的，只不过是 etag 是服务端对比资源按照一定的方式（比如 contenthash）计算出来的唯一标识，传给客户端后，客户端在给服务端，服务端和现有的资源计算出来的唯一值进行比较，一致则返回 304，不一致则返回 200 和新的资源及新的 etag.
+
+两者比较：
+
+-   优先使用 etag
+-   last-modified 只能精确到秒级
+-   如果资源被重复生成，而内容不变，则 Etag 更精确
+
+三种刷新操作对 http 缓存的影响
+
+-   正常操作： 地址栏输入 url, 跳转链接，前进后退等 (强制缓存有效，协商缓存有效)
+-   手动刷新： f5, 点击刷新按钮，右键刷新 （强制缓存失效，协商缓存有效）
+-   强制刷新： ctrl+f5, shift+command+r （强制缓存失效，协商缓存失效）
+
+cache-Control 拓展：
+
+指令
+`public` 表明响应可以被任何对象缓存，（1. 响应中没有 max-age 指令或 Expires 消息头；2.该响应对应的请求方式是 POST）
+`private` 表明响应只能被单个用户缓存，不能作为共享缓存（即代理服务器不能缓存它），私有缓存可以缓存响应内容，比如：对应用户的本地浏览器
+`no-cache` 在发布缓存副本之前，强制要求缓存把请求提交给原始服务器进行验证（协商缓存验证）
+`no-store` 缓存不应存储有关客户端请求或服务端响应的任何内容，即不使用任何缓存
+
+禁止缓存
+
+```js
+Cache-Control: no-store
+```
+
+缓存静态资源
+
+```js
+Cache-Control: public, max-age=360000
+```
+
+需要重新验证
+
+```js
+Cache-Control: no-cache
+```
+
+或
+
+```js
+Cache-Control: max-age=0，must-revalidate
+```
