add: Garbage collection

--- a/note/前端周/202203第4周.md
+++ b/note/前端周/202203第4周.md
@@ -164,3 +164,41 @@ Cache-Control: no-cache
 ```js
 Cache-Control: max-age=0，must-revalidate
 ```
+
+## JS 垃圾回收 （GC） Garbage Collection
+
+javascript 内存管理中有一个概念叫可达性，就是以某种方式可访问或者说可用的值，它们被保证存储在内存中，反之不可访问则需回收
+
+**垃圾回收策略**
+
+标记清除法
+
+    算法分为 `标记`和`清除`两个阶段，标记阶段即为所有的活动对象做上标记，清除阶段则把没有标记（也非活动对象）销毁
+
+    过程大致如下
+
+    -   垃圾收集器在运行时会给内存中的所有变量加上一个标记，假设内存中所有的对象都是垃圾，全部标记为 0
+    -   然后从各个根对象开始遍历，把不是垃圾的节点改成 1
+    -   清理所有标记为 0 的垃圾，销毁并回收它们所占的空间
+    -   最后，把所有内存中对象标记修改为 0，等待下一轮垃圾回收
+
+优点
+
+-   实现简单
+
+缺点
+
+-   出现内存碎片 🧩。
+
+引用计数算法
+
+是最早先的一种垃圾回收 ♻️ 算法。它把对象`是否不再需要`简化为`对象有没有其他对象引用到它`, 如果没有引用指向该对象（零引用），对象将被垃圾回收机制回。
+
+**V8 对 GC 的优化**
+
+分代式垃圾回收
+
+新老生代
+V8 的垃圾回收策略主要是基于分代式垃圾回收机制，V8 中将内存分为新生代和老生代两区域，采用不同的垃圾回收器也就是不同的策略管理垃圾回收
+
+V8 整个内存的大小就等于新生代（1-8M）加上老生代的内存
