--- a/note/前端周/202205第二周/20200502.md
+++ b/note/前端周/202205第二周/20200502.md
@@ -1,5 +1,9 @@
 ## 原型
 
+### 所有的数据都是对象
+
+### 要得到一个对象，不是通过实例化类，而是找到一个对象作为原型并克隆它
+
 在 javascript 中没有类的概念。对于 new Person() 而言，Person 并不是类，而是函数的构造器。javascript 的函数既可以当成普通函数被调用，也可以作为构造器被调用。
 
 理解 new 的过程
@@ -33,3 +37,25 @@ newObj.getName()
 - 拿到需要被 new 的构造函数的构造器 constructor 并让空对象的**proto** 原型---> 指向 contractor 的原 prototype [].shift.call(arguments) // 取出参数第一个值 obj.**proto** = constructor.prototype
 - 借用构造器给 obj 设置属性 const result = construtor.apply(obj, arguments)
 - 确保返回是一个 object
+
+### 对象会记住它的原型
+
+如果请求可以在同一个链条中依次传递，那么每个节点都必须知道它的下一个节点。同理，要完成 IO 语言或则 javascript 的原型链查找机制，每个对象都至少应该先记住它的原型。
+其实不能说所有的对象都有原型，而只能说对象的构造器有原型。
+对于说把对象的请求委托给它自己的原型----> 把对象的请求委托它的构造器的原型
+
+javascript 给对象提供一个名为`__proto__` 的隐藏属性，某个对象的`__proto__` 属性默认就会指向她的构造器的原型对象。即`{constructor}.prototype`
+
+`__proto__` 就是对象跟 对象构造器的原型 联系起来的纽带。正因为需要通过`__proto__`属性来记住它的构造器的原型。
+
+```js
+const obj = Object.create()
+obj.__proto__ = {}.constructor.prototype // {}.constructor 某个构造器 通过这个代码可以让原本指向的Objec.prototype ----> 指向了新的构造器的prototype
+```
+
+### 对象无法响应某个请求，它就会把把这个请求委托给它的构造器的原型 （原型链继承的精髓）
+
+在 javascript 中，每个对象都是从 Object.prototype 对象克隆而来的，如果这样？我们只能得到单一的继承关系，即每个对象都继承来自`Object.prototype`对象，这样对象显然是非常受限的。
+
+实际上，虽然对象最初都是通过 Obejct.prototype 克隆而来，但是对象构造器的原型不仅限于 Object.prototype 上，而是可以动态指向其他对象。当 对象 a 需要借用对象 b 的能力时，可以选择性把对象 a 的构造器原型指向对象 b.
+从而达到继承效果。
