--- a/note/mysql/基础/事务.md
+++ b/note/mysql/基础/事务.md
@@ -76,3 +76,9 @@ ROLLBACK; # 回滚事物
 - 一致性 （事务完成时，必须所有的数据保持一致状态）
 - 隔离性  (数据库系统的隔离机制，保证事务不受外部并发操作影响的独立运行环境下运行)
 - 持久性 (事务一旦提交或者回滚，它对数据库中的数据的改变就是永久的)
+
+
+
+多事务同时执行的时候，可能会出现的问题：脏读、不可重复读、幻读
+
+事务的隔离级别： 读未提交、读提交、可可重复读、串行化
